<resources>
    <string name="app_name">FlightPaths</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="new_user_text_string"><u>No account? Click here to sign up!</u></string>
    <string name="existing_user_text_string"><u>Already have an account? Click here to sign in!</u></string>
    <string name="action_register_button">REGISTER</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">(No Set Names)</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="ship">Ships</string>
    <string name="fuel">Fuel</string>
    <string name="payloads">Payloads</string>
    <string name="map">Map</string>
    <string name="sign_out">Sign Out</string>
    <string name="settings">About</string>
    <string name="options">Options</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="activity_settings_Category_Users">User Settings</string>
    <string name="activity_settings_Change_Name">Change your display name</string>
    <string name="title_activity_new_mission">NewMissionActivity</string>
    <string name="str_mission_name">Mission Name</string>
    <string name="ship_title_section">Ship/Vehicle</string>
    <string name="starting_point">Starting Point</string>
    <string name="destination">Destination</string>
    <string name="create">CREATE</string>
    <string name="title_activity_mission_overview">MissionOverviewActivity</string>
    <string name="duration">Duration</string>
    <string name="mission_duration">#Mission_Duration</string>
    <string name="composition_by_mass">Composition by mass</string>
    <string name="mission_objects">#Mission_Objects</string>
    <string name="bodies">Bodies</string>
    <string name="bodies_used">#Bodies_Used</string>
    <string name="estimated_cost">Estimated Cost</string>
    <string name="based_on_rt">#Based_On_RT</string>
    <string name="calculate_return_trip">Calculate return trip?</string>
    <string name="title_activity_ships">Ships</string>
    <string name="title_activity_new_ships">Add New Ships</string>
    <string name="add_new_launch_vehicle">Add New Launch Vehicle</string>
    <string name="ship_name">Ship Name</string>
    <string name="ship_mass">Ship Mass (KG)</string>
    <string name="add">ADD</string>
    <string name="title_activity_payloads">Payloads</string>
    <string name="title_activity_new_payload">New Payload</string>
    <string name="payload_name">Payload Name</string>
    <string name="payload_mass_kg">Payload Mass(KG)</string>
    <string name="from_the_starting_point">From the Starting Point</string>
    <string name="starting_planet">Starting Planet:</string>
    <string name="starting_velocity">Starting Velocity:</string>
    <string name="insertion_burn">Insertion Burn:</string>
    <string name="starting_deltav">Starting DeltaV:</string>
    <string name="at_the_destination">At the Destination</string>
    <string name="destination_planet">Destination Planet:</string>
    <string name="ending_velocity">Ending Velocity:</string>
    <string name="arrival_burn">Arrival Burn:</string>
    <string name="actual_arrival_burn">Actual Arrival Burn:</string>
    <string name="escape_velocity">Escape Velocity:</string>
    <string name="ending_deltav">Ending DeltaV:</string>
    <string name="final_deltav">FINAL DeltaV:</string>
</resources>
