<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_ships"
            android:icon="@mipmap/rocket_24"
            android:title="@string/ship" />
        <item
            android:id="@+id/nav_payloads"
            android:icon="@mipmap/payload_box_24"
            android:title="@string/payloads" />
    </group>

    <item android:title="@string/options">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_sign_out"
                android:title="@string/sign_out" />
        </menu>
    </item>

</menu>
