<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewMissionActivity"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:title="New Flight Plan"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20sp"
            android:paddingRight="20sp"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/mission_name"
                android:textSize="28sp"
                android:hint="@string/str_mission_name"/>

            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ship_title_section"
            android:textSize="18sp"
            android:textColor="@color/cust_text_color"
            android:paddingTop="20sp"
            android:text="@string/ship_title_section"/>

            <android.support.v7.widget.AppCompatSpinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8sp"
                android:id="@+id/ship_spinner">


            </android.support.v7.widget.AppCompatSpinner>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fuel_title_section"
                android:textSize="18sp"
                android:textColor="@color/cust_text_color"
                android:paddingTop="15sp"
                android:text="@string/fuel"/>

            <android.support.v7.widget.AppCompatSpinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8sp"
                android:id="@+id/fuel_spinner">


            </android.support.v7.widget.AppCompatSpinner>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/payload_title_section"
                android:textSize="18sp"
                android:textColor="@color/cust_text_color"
                android:paddingTop="15sp"
                android:text="@string/payloads"/>

            <android.support.v7.widget.AppCompatSpinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8sp"
                android:id="@+id/payload_spinner">


            </android.support.v7.widget.AppCompatSpinner>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/start_title_section"
                android:textSize="18sp"
                android:textColor="@color/cust_text_color"
                android:paddingTop="15sp"
                android:text="@string/starting_point"/>

            <android.support.v7.widget.AppCompatSpinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8sp"
                android:id="@+id/start_point_spinner">


            </android.support.v7.widget.AppCompatSpinner>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/destination_title_section"
                android:textSize="18sp"
                android:textColor="@color/cust_text_color"
                android:paddingTop="15sp"
                android:text="@string/destination"/>

            <android.support.v7.widget.AppCompatSpinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8sp"
                android:id="@+id/destination_spinner"
                android:paddingBottom="20.5sp">


            </android.support.v7.widget.AppCompatSpinner>
            
            
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create"
                android:id="@+id/create_mission"
                android:textColor="#FFFFFF"
                android:background="@color/cust_text_color"
                android:layout_gravity="end"
                android:layout_marginRight="17dp"
                android:layout_marginLeft="17dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="9dp"/>

        </LinearLayout>

    </ScrollView>

    <include layout="@layout/content_new_mission" />

</LinearLayout>